<resources>
    <string name="app_name">CookieApp</string>
    <string name="clicker">Clicker</string>
    <string name="shop">Shop</string>
    <string name="click_me">Click Me!</string>
    <string name="cookies_0">Cookies: 0</string>
    <string name="item_name">Item Name</string>
    <string name="cost">Cost</string>
    <string name="buy">Buy</string>
    <string name="cookies_in">Cookies: 0</string>
    <string name="cookies_sec_0">Cookies/sec: 0</string>
    <string name="cookies_click_0">Cookies/click: 0</string>
    <string name="time_00_00_00">Time: 00:00:00</string>
    <string name="avg_speed_0">Avg Speed: 0</string>
    <string name="clicks_sec_0">Clicks/sec: 0</string>
</resources>